src/components/layout/layout.module.scss
@import '../../styles/variables.module.scss';
@import '../../styles/fonts.module.scss';
@import '../../styles/link-styles.module.scss';

.layout {
  background: linear-gradient(334deg, #fafafa -0.91%, #ebf0ff 48.81%, #fafafa 99.52%);
  min-height: 100vh;
  position: relative;
}

.content {
  display: flex;
}

.main {
  max-width: 468px;
  padding: 0 16px;
  margin: 0 auto;
  flex: 1;

  @media (min-width: $sm) {
    max-width: 640px;
  }

  @media (min-width: $md) {
    max-width: 920px;
    padding: 0 64px;
    padding-bottom: 80px;
  }
}

.footer {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: center;
  height: 196px;

  &Content {
    display: flex;
    padding-top: 44px;

    a {
      display: flex;
      align-items: center;
      text-decoration: none;
      @include font-overline-2;
      @include menu-link-secondary;
    }

    & > *,
    & > a {
      border-right: 1px solid $color-dark-blue-10;
      padding: 0 8px;

      &:last-child {
        border-right: none;
      }
    }

    &::after {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      right: 0;
      height: 4px;
      background: $gradient-medium-light;
    }
  }
}

@media (min-width: $md) {
  .footer {
    height: 140px;

    &Content {
      padding-top: 64px;

      a {
        @include font-body-15;
      }

      & > *,
      & > a {
        padding: 0 40px;
      }
    }
  }
}

